fix: fix SideNav toggled styles on small devices

--- a/src/components/atoms/CircleProgress/circleProgress.module.css
+++ b/src/components/atoms/CircleProgress/circleProgress.module.css
@@ -46,7 +46,7 @@
 
   .progress-partial {
     &.circle-progress {
-      stroke: var(--color-progress-partial)
+      stroke: var(--color-progress-partial);
     }
 
     &.text {
